# ChangeLog for sci-libs/fftw
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-libs/fftw/ChangeLog,v 1.168 2015/02/24 09:13:14 ago Exp $

  24 Feb 2015; Agostino Sarubbo <ago@gentoo.org> fftw-3.3.4.ebuild:
  Stable for alpha, wrt bug #530904

  23 Feb 2015; Agostino Sarubbo <ago@gentoo.org> fftw-3.3.4.ebuild:
  Stable for ppc64, wrt bug #530904

  21 Feb 2015; Agostino Sarubbo <ago@gentoo.org> fftw-3.3.4.ebuild:
  Stable for ppc, wrt bug #530904

  19 Feb 2015; Agostino Sarubbo <ago@gentoo.org> fftw-3.3.4.ebuild:
  Stable for amd64, wrt bug #530904

  17 Feb 2015; Markus Meier <maekke@gentoo.org> fftw-3.3.4.ebuild:
  arm stable, bug #530904

  08 Feb 2015; Jeroen Roovers <jer@gentoo.org> fftw-3.3.4.ebuild:
  Stable for HPPA (bug #530904).

  29 Jan 2015; Michał Górny <mgorny@gentoo.org> fftw-3.3.3-r2.ebuild,
  fftw-3.3.4.ebuild, metadata.xml:
  Convert to CPU_FLAGS_X86.

  02 Sep 2014; Tiziano Müller <dev-zero@gentoo.org> fftw-3.3.4.ebuild:
  Disable parallel ABI-install (bug #521044).

  28 Aug 2014; Mikle Kolyada <zlogene@gentoo.org> fftw-2.1.5-r8.ebuild:
  arm stable wrt bug #496422

  06 Aug 2014; Christoph Junghans <ottxor@gentoo.org> -fftw-3.3.3-r3.ebuild,
  fftw-3.3.4.ebuild:
  disable header wrapping (bug #519094)

  17 Jun 2014; Michał Górny <mgorny@gentoo.org> fftw-3.3.4.ebuild:
  Use ${ABI} to disable quad precision w/ abi_x86_32.

  24 May 2014; Michał Górny <mgorny@gentoo.org> fftw-3.3.3-r3.ebuild,
  fftw-3.3.4.ebuild:
  Fix the variant-obtaining hack after changes to build dir naming in multilib-
  build. Bug #511198.

*fftw-3.3.4 (22 Apr 2014)

  22 Apr 2014; Sébastien Fabbro <bicatali@gentoo.org> +fftw-3.3.4.ebuild:
  Version bump

  21 Oct 2013; Fabian Groffen <grobian@gentoo.org> fftw-3.3.3-r3.ebuild:
  Marked ~x64-macos, bug #486818

  26 Sep 2013; Christoph Junghans <ottxor@gentoo.org> -fftw-3.2.2-r2.ebuild,
  -fftw-3.2.2.ebuild, -fftw-3.3.3-r1.ebuild, -fftw-3.3.3.ebuild,