@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/fftw/fftw-3.3.4.ebuild,v 1.12 2015/02/24 09:13:14 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/fftw/fftw-3.3.4.ebuild,v 1.13 2015/02/25 15:31:02 ago Exp $
 
 EAPI=5
 
@@ -14,11 +14,11 @@ HOMEPAGE="http://www.fftw.org/"
 if [[ ${PV} = *9999 ]]; then
 	inherit git-2
 	EGIT_REPO_URI="https://github.com/FFTW/fftw3.git"
-	KEYWORDS="alpha amd64 arm hppa ppc ppc64"
+	KEYWORDS="alpha amd64 arm hppa ppc ppc64 x86"
 	AUTOTOOLS_AUTORECONF=1
 else
 	SRC_URI="http://www.fftw.org/${P}.tar.gz"
-	KEYWORDS="alpha amd64 arm hppa ~ia64 ~mips ppc ppc64 ~sparc ~x86 ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos"
+	KEYWORDS="alpha amd64 arm hppa ~ia64 ~mips ppc ppc64 ~sparc x86 ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos"
 fi
 
 LICENSE="GPL-2"
