@@ -1,6 +1,9 @@
 # ChangeLog for sci-libs/fftw
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/fftw/ChangeLog,v 1.168 2015/02/24 09:13:14 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/fftw/ChangeLog,v 1.169 2015/02/25 15:31:02 ago Exp $
+
+  25 Feb 2015; Agostino Sarubbo <ago@gentoo.org> fftw-3.3.4.ebuild:
+  Stable for x86, wrt bug #530904
 
   24 Feb 2015; Agostino Sarubbo <ago@gentoo.org> fftw-3.3.4.ebuild:
   Stable for alpha, wrt bug #530904
